# opds-client

./: Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs
src/: auth.rs  connection.rs  error.rs  lib.rs  opds_client.rs  opds_server.rs  server.rs
tests/: web.rs
tests/resources/: catalog.xml  feed.xml
