[package]
name = "opds_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "opds_client"
crate-type = ["cdylib", "rlib"]

[dependencies]
dotenv = "0.15.0"
httpmock = "0.6.7"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = "1.0.164"
serde-xml-rs = "0.6.0"
thiserror = "1.0.40"
xml-rs = "0.8.14"
